# sdmx-dt

./: .gitignore  .pre-commit-config.yaml  README.rst  mypy.ini  pyproject.toml
.github/workflows/: test.yaml
sdmx_dt/: artefacts.py  fread.py  sdmx_json.py
src/sdmx_dt/: sdmx_json.py
src/sdmx_dt/information_model/: base.py  basic_data_types.py  category_scheme.py  codelist.py  concept_scheme.py  data_structure_definition.py  item_scheme.py  misc.py  organisation_scheme.py  reporting_taxonomy.py  structure.py
tests/: __init__.py  conftest.py  test_fread.py  test_sdmx_dt.py  test_sdmx_json.py
tests/expected_data/agri.json/: attributes.csv  dimensions.csv  observations.csv
tests/expected_data/exr-action-delete.json/: attributes.csv  observations1.csv
tests/expected_data/exr-cross-section.json/: attributes.csv  dimensions.csv  observations.csv
