[tool.poetry]
name = "sdmx-dt"
version = "0.1.0"
description = "Parse SDMX into datatables."
authors = ["xaviermiles <xaviermiles377@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
datatable = "^1.0.0"
requests = "^2.27.1"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
